feat(admin-templates): agregar estructura de plantilla base a archivos HTML
- Se añadió el bloque base de plantilla con título y contenido a múltiples archivos HTML.
- Se extendió `master.html` y se definieron bloques para el título y el contenido.
- Se incluyó el componente `admin-display.html` en la sección de contenido de los archivos correspondientes.

--- a/foros/templates/administrar_foros.html
+++ b/foros/templates/administrar_foros.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% block title %}
-ForoVox | Crear Foro
+ForoVox | Administrar Foros
 {% endblock %}
 
 {% block content %}
