--- a/foros/templates/crear_tematica.html
+++ b/foros/templates/crear_tematica.html
@@ -1,1 +1,12 @@
-<h1>Crear Tematica</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Crear Temática
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
