--- a/foros/templates/editar_comentario.html
+++ b/foros/templates/editar_comentario.html
@@ -1,1 +1,12 @@
-<h1>Editar comentario</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Editar Comentario
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
