--- a/foros/templates/editar_perfil_usuario.html
+++ b/foros/templates/editar_perfil_usuario.html
@@ -1,1 +1,12 @@
-<h1>Editar perfil personal</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Editar Perfil
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
