--- a/foros/templates/ver_foro.html
+++ b/foros/templates/ver_foro.html
@@ -1,1 +1,12 @@
-<h1>Ver Foro</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Ver Foro
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
