--- a/foros/templates/editar_foro.html
+++ b/foros/templates/editar_foro.html
@@ -1,1 +1,12 @@
-<h1>Editar Foro</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Editar Foro
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
