--- a/foros/templates/gestionar_usuarios.html
+++ b/foros/templates/gestionar_usuarios.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% block title %}
-ForoVox | Crear Foro
+ForoVox | Gestionar Usuarios
 {% endblock %}
 
 {% block content %}
