--- a/foros/templates/historial_acciones.html
+++ b/foros/templates/historial_acciones.html
@@ -1,1 +1,12 @@
-<h1>Historial de Acciones</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Historial de Acciones
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
