--- a/foros/templates/index.html
+++ b/foros/templates/index.html
@@ -1,1 +1,12 @@
-<h1>Index</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
