feat(login-page): crear plantilla de login extendiendo master.html
- Se creó `login.html` extendiendo la plantilla base `master.html`.
- Se añadió un bloque `title` con el título "ForoVox | Login".
- Se incluyó el componente `header-nosession.html` en la sección de contenido.
- Se añadió un encabezado `<h1>` con el texto "This is the login.html".

--- a/foros/templates/login.html
+++ b/foros/templates/login.html
@@ -1,1 +1,13 @@
-<h1>Login</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Login
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/header-nosession.html' %}
+
+<h1>This is the login.html</h1>
+
+{% endblock %}
