--- a/foros/templates/modificar_tematica.html
+++ b/foros/templates/modificar_tematica.html
@@ -1,1 +1,12 @@
-<h1>Modificar Tematica</h1>
+{% extends 'master.html' %}
+
+{% block title %}
+ForoVox | Modificar Temática
+{% endblock %}
+
+{% block content %}
+
+{% include 'components/admin-display.html' %}
+
+
+{% endblock %}
