--- a/foros/templates/master.html
+++ b/foros/templates/master.html
@@ -14,9 +14,25 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
-<body style="font-family: 'Poppins', sans-serif;">
+<body style="font-family: 'Poppins', sans-serif;" class="bg-[#FAFAFA]">
   {% block content %}
   {% endblock %}
+  <script>
+    const profileImage = document.querySelector('#profile-image')
+    const navigationMenu = document.querySelector('#navigation-menu')
+
+    profileImage.addEventListener('click', (event) => {
+      navigationMenu.classList.toggle('hidden')
+      event.stopPropagation()
+    })
+
+    window.addEventListener('click', (event) => {
+      if (!navigationMenu.contains(event.target)) {
+        navigationMenu.classList.add('hidden')
+      }
+    })
+
+  </script>
 </body>
 
 </html>
