--- a/foros/templates/components/admin-display.html
+++ b/foros/templates/components/admin-display.html
@@ -1,6 +1,6 @@
 {% load static %}
-<header class="flex justify-center px-4 py-2 bg-[#10182B] text-white">
-  <div class="flex justify-between items-center w-full max-w-7xl">
+<header class="fixed w-full flex justify-center px-4 py-2 bg-[#10182B] text-white">
+  <div class="relative flex justify-between items-center w-full max-w-7xl">
     <div class="flex items-center gap-2">
       <i class="ri-chat-4-line text-[2rem]"></i>
       <h1 class="text-[2rem] hidden md:block font-bold font-serif">
@@ -10,10 +10,10 @@
       class="size-11 rounded-full cursor-pointer xl:cursor-auto">
   </div>
 </header>
-<div class="flex justify-center pt-8">
-  <aside class="max-w-7xl w-full">
+<div class="flex justify-center pt-[6.25rem]">
+  <aside class="max-w-7xl w-full relative">
     <ul id="navigation-menu"
-      class="hidden xl:flex xl:flex-col fixed right-4 z-50 bg-white text-sm text-[#333333] gap-2 p-4 border-[0.094rem] w-full max-w-72 border-[#D9D9D9] rounded-lg xl:right-auto xl:left-auto xl:inset-auto">
+      class="hidden xl:flex xl:flex-col fixed right-4 bg-[#FAFAFA] z-50 text-sm text-[#333333] gap-2 p-4 border-[0.094rem] w-full max-w-72 border-[#D9D9D9] rounded-lg xl:right-auto xl:left-auto xl:inset-auto">
       <a href="">
         <li
           class="flex gap-3 items-center p-1 rounded-md hover:bg-[#f4f4f5] transition-colors hover:text-[#000000] cursor-pointer">
@@ -59,17 +59,3 @@
     </ul>
   </aside>
 </div>
-<script>
-  const profileImage = document.querySelector('#profile-image')
-  const navigationMenu = document.querySelector('#navigation-menu')
-
-  profileImage.addEventListener('click', () => {
-    navigationMenu.classList.toggle('hidden')
-  })
-
-  window.onclick = function (event) {
-    if (event.target.contains(navigationMenu) && event.target !== navigationMenu) {
-      navigationMenu.classList.add('hidden')
-    }
-  }
-</script>
