feat(view): actualizar contenido de la vista del foro
- Se cambió el include de 'admin-display.html' a 'usuario-display.html' para reflejar la vista de usuario.
- Se añadió una nueva sección con descripción detallada sobre el foro de programación.
- Se agregó una estructura visual centrada con un contenedor máximo para mejorar la legibilidad.

--- a/foros/templates/ver_foro.html
+++ b/foros/templates/ver_foro.html
@@ -6,7 +6,17 @@ ForoVox | Ver Foro
 
 {% block content %}
 
-{% include 'components/admin-display.html' %}
-
+{% include 'components/usuario-display.html' %}
+<div class="flex justify-center">
+  <div class="max-w-7xl w-full xl:pl-[20.813rem]">
+    <div class="">
+      <img src="" alt="">
+      <h1>programación</h1>
+      <p>Un espacio para compartir conocimientos, resolver dudas y discutir sobre lenguajes, frameworks,
+        desarrollo web, IA y más. Tanto principiantes como expertos pueden colaborar, compartir proyectos
+        y superar desafíos de código juntos. ¡Únete para aprender y crecer como programador!</p>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
