fix: ajuste en el menú lateral y posicionamiento del layout
- Se añadió la clase top-20 para mejorar la posición del menú lateral en pantallas grandes.
- Se cambió el color de hover en los elementos del menú de #f4f4f5 a #F1F3F8 para mayor consistencia visual.
- Se mantuvo la funcionalidad de las opciones "Foros que sigues", "Ver Perfil" y "Cerrar sesión".

--- a/foros/templates/components/usuario-display.html
+++ b/foros/templates/components/usuario-display.html
@@ -13,24 +13,24 @@
 <div class="flex justify-center pt-[6.25rem]">
   <aside class="max-w-7xl w-full relative">
     <ul id="navigation-menu"
-      class="hidden xl:flex xl:flex-col fixed right-4 z-50 bg-[#FAFAFA] text-sm text-[#333333] gap-2 p-4 border-[0.094rem] w-full max-w-72 border-[#D9D9D9] rounded-lg xl:right-auto xl:left-auto xl:inset-auto">
+      class="hidden xl:flex xl:flex-col fixed right-4 top-20 z-50 bg-[#FAFAFA] text-sm text-[#333333] gap-2 p-4 border-[0.094rem] w-full max-w-72 border-[#D9D9D9] rounded-lg xl:right-auto xl:left-auto xl:inset-auto">
       <a href="">
         <li
-          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#f4f4f5] transition-colors hover:text-[#000000] cursor-pointer">
+          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#F1F3F8] transition-colors hover:text-[#000000] cursor-pointer">
           <img src="{% static 'imagenes/tabula_rasa.png' %}" alt="Foto de perfil" class="size-6 rounded-full">
           Ver Perfil
         </li>
       </a>
       <a href="">
         <li
-          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#f4f4f5] transition-colors hover:text-[#000000] cursor-pointer">
+          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#F1F3F8] transition-colors hover:text-[#000000] cursor-pointer">
           <i class="ri-group-2-line text-2xl"></i>
           Foros que sigues
         </li>
       </a>
       <a href="">
         <li
-          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#f4f4f5] transition-colors hover:text-[#000000] cursor-pointer">
+          class="flex gap-3 items-center p-1 rounded-md hover:bg-[#F1F3F8] transition-colors hover:text-[#000000] cursor-pointer">
           <i class="ri-logout-box-r-line text-2xl"></i>
           Cerrar sesión
         </li>
