style: actualización de estilos de fondo en el formulario de registro
- Se actualizó el estilo de los campos del formulario de registro, añadiendo un fondo de color `#fafafa` para mejorar la visibilidad y consistencia visual.
- Se mantuvieron las propiedades de los bordes y el diseño general de los inputs.
- Los botones y enlaces permanecen sin cambios funcionales, pero se mantienen coherentes con el diseño general.

--- a/foros/templates/signup.html
+++ b/foros/templates/signup.html
@@ -13,20 +13,23 @@ ForoVox | Sign Up
   <p class="text-[#666666] mt-1.5 text-center">Rellena el formulario para poder registrarte</p>
   <form action="index.html" method="post" class="mt-8 px-4">
     <div class="flex flex-col max-w-[23rem] gap-4">
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="text" placeholder="Rut" required>
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="text" placeholder="Nombres" required>
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="text" placeholder="Rut"
+        required>
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="text" placeholder="Nombres"
+        required>
       <div class="flex gap-4">
-        <input class="w-full border border-[#B4B4B4] rounded-lg py-2 text-center" type="text"
+        <input class="bg-[#fafafa] w-full border border-[#B4B4B4] rounded-lg py-2 text-center" type="text"
           placeholder="Apellido Materno" required>
-        <input class="w-full border border-[#B4B4B4] rounded-lg py-2 text-center" type="text"
+        <input class="bg-[#fafafa] w-full border border-[#B4B4B4] rounded-lg py-2 text-center" type="text"
           placeholder="Apellidor Paterno" required>
       </div>
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="email" placeholder="Correo" required>
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="text" placeholder="Nacionalidad"
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="email" placeholder="Correo"
         required>
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="password" placeholder="Contraseña"
-        required>
-      <input class="border border-[#B4B4B4] rounded-lg py-2 text-center" type="password"
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="text"
+        placeholder="Nacionalidad" required>
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="password"
+        placeholder="Contraseña" required>
+      <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="password"
         placeholder="Repetir contraseña" required>
       <button type="submit"
         class="bg-[#10182B] text-white hover:bg-[#1C253B] rounded-lg py-2 text-center">Registrar</button>
