`feat: agregar formulario de creación de foro con carga de imagen y mejoras en la interfaz`
- Se añadió un formulario para crear un nuevo foro, incluyendo campos para ingresar el nombre y la descripción del foro.
- Se implementó la funcionalidad para subir una imagen personalizada para el foro con previsualización dinámica.
- Se incluyeron botones de acción "Crear Foro" y "Cancelar" para gestionar el formulario.
- Se integró un script que permite la previsualización de la imagen seleccionada antes de subirla.
- Se añadieron mejoras visuales y de usabilidad en la interfaz de creación de foros.

--- a/foros/templates/crear_foro.html
+++ b/foros/templates/crear_foro.html
@@ -1,4 +1,5 @@
 {% extends 'master.html' %}
+{% load static %}
 
 {% block title %}
 ForoVox | Crear Foro
@@ -7,6 +8,40 @@ ForoVox | Crear Foro
 {% block content %}
 
 {% include 'components/admin-display.html' %}
+<div class="flex justify-center">
+  <div class="flex flex-col items-center xl:items-start max-w-7xl w-full px-4 xl:pl-[25rem]">
+    <form action="" class="flex flex-col w-full max-w-lg">
+      <h1 class="text-2xl font-bold mb-10 text-start">Crear foro</h1>
+      <div class="flex w-full items-center gap-3.5 mb-6">
+        <img src="{% static 'imagenes/tabula_rasa.png' %}" id="foto-de-perfil" alt="Imagen del Foro"
+          class="size-24 rounded-full object-cover">
+        <label for="input-file"
+          class="text-sm rounded-md bg-[#EDEDED] p-2.5 cursor-pointer transition-colors hover:bg-[#E6E6E6]"><i
+            class="ri-upload-line"></i> Subir imagen</label>
+        <input type="file" accept="image/jpeg, image/png, image/jpg" id="input-file" class="hidden">
+      </div>
+      <div class="flex w-full flex-col">
+        <input type="text" placeholder="Nombre del Foro"
+          class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg p-3 mb-4">
+        <textarea placeholder="Descripción del Foro"
+          class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg p-3 resize-none h-[16rem]"></textarea>
+      </div>
+      <div class="flex flex-wrap gap-4 mt-4">
+        <button type="submit" class="p-[0.625rem] rounded-lg text-sm bg-[#1c253b] text-[#fafafa] hover:opacity-95">Crear
+          Foro</button>
+        <button type="reset"
+          class="p-[0.625rem] rounded-lg text-sm bg-[#fafafa] text-[#1c253b] border border-[#1c253b] hover:bg-[#F1F3F8]">Cancelar</button>
+      </div>
+    </form>
+  </div>
+</div>
+<script>
+  let fotoDePerfil = document.querySelector('#foto-de-perfil');
+  let inputFile = document.querySelector('#input-file');
 
+  inputFile.onchange = () => {
+    fotoDePerfil.src = URL.createObjectURL(inputFile.files[0]);
+  }
 
+</script>
 {% endblock %}
