--- a/foros/templates/components/admin-display.html
+++ b/foros/templates/components/admin-display.html
@@ -14,7 +14,7 @@
   <aside class="max-w-7xl w-full relative">
     <ul id="navigation-menu"
       class="hidden xl:flex xl:flex-col fixed right-4 top-20 z-50 bg-[#FAFAFA] text-sm text-[#333333] gap-2 p-4 border-[0.094rem] w-full max-w-72 border-[#D9D9D9] rounded-lg xl:right-auto xl:left-auto xl:inset-auto">
-      <a href="">
+      <a href="/perfil_usuario/">
         <li
           class="flex gap-3 items-center p-1 rounded-md hover:bg-[#F1F3F8] transition-colors hover:text-[#000000] cursor-pointer">
           <img src="{% static 'imagenes/tabula_rasa.png' %}" alt="Foto de perfil" class="size-6 rounded-full">
