Añadida tabla para gestionar usuarios en la vista de administración.
- Se agregó una tabla que muestra los nombres de usuario junto con las opciones para editar, ver y eliminar usuarios.
- Se mejoró el diseño con bordes y estilos de hover en las filas de la tabla.
- Incluye botones para editar, ver y eliminar cada usuario, mejorando la usabilidad de la interfaz.

--- a/foros/templates/gestionar_usuarios.html
+++ b/foros/templates/gestionar_usuarios.html
@@ -7,6 +7,100 @@ ForoVox | Gestionar Usuarios
 {% block content %}
 
 {% include 'components/admin-display.html' %}
-
+<div class="flex justify-center">
+  <div class="flex flex-col items-center xl:items-start max-w-7xl w-full px-4 xl:pl-[25rem]">
+    <h2 class="font-bold text-2xl mb-8">Gestionar Usuarios</h2>
+    <div class="max-w-2xl w-full border rounded-md border-[#D9D9D9]">
+      <table class="w-full table-auto text-sm">
+        <thead class="">
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <th class="text-left p-2">Nombre de usuario</th>
+            <th class="text-right p-2">Moderación</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">cybil23</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">destroyer20</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">messi10</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">skills123</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">hipnotron</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+          <tr class="hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2">maradonagod10</td>
+            <td class="text-right p-2">
+              <a href="/editar_foro/">
+                <button
+                  class="rounded-md bg-[#1c253b] text-[#fafafa] p-1.5 transition-colors hover:bg-[#24304C]">Editar</button>
+              </a>
+              <button
+                class="rounded-md border border-[#1c253b] text-[#1c253b] p-1.5 transition-colors hover:bg-[#F2F2F2]">Ver</button>
+              <button
+                class="flex-1 rounded-md bg-[#fafafa] text-[#ec2c2c] border border-[#ec2c2c] p-1.5 transition-colors hover:bg-[#F2F2F2]">Eliminar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
