Añadida tabla para visualizar el historial de acciones en la vista de administración.
- Se implementó una tabla que muestra el historial de acciones con los campos: Id, Nombre, Acción, y Fecha y hora.
- Se añadieron estilos para los bordes y efectos de hover en las filas de la tabla.
- Mejora en la presentación de la información, facilitando el seguimiento de acciones administrativas.

--- a/foros/templates/historial_acciones.html
+++ b/foros/templates/historial_acciones.html
@@ -7,6 +7,54 @@ ForoVox | Historial de Acciones
 {% block content %}
 
 {% include 'components/admin-display.html' %}
-
+<div class="flex justify-center">
+  <div class="flex flex-col items-center xl:items-start max-w-7xl w-full px-4 xl:pl-[25rem]">
+    <h2 class="font-bold text-2xl mb-8">Historial de Acciones</h2>
+    <div class="max-w-2xl w-full border rounded-md border-[#D9D9D9]">
+      <table class="w-full table-auto text-sm">
+        <thead>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <th class="text-left p-2 py-3.5">Id</th>
+            <th class="text-left p-2 py-3.5">Nombre</th>
+            <th class="text-left p-2 py-3.5">Acción</th>
+            <th class="text-right p-2 py-3.5">Fecha y hora</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2 py-3.5">5</td>
+            <td class="text-left p-2 py-3.5">Admin</td>
+            <td class="text-left p-2 py-3.5">Eliminar cuenta de usuario</td>
+            <td class="text-right p-2 py-3.5">Sept. 18, 2024, 10:20 a.m</td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2 py-3.5">4</td>
+            <td class="text-left p-2 py-3.5">messi10</td>
+            <td class="text-left p-2 py-3.5">Registrarse</td>
+            <td class="text-right p-2 py-3.5">Sept. 19, 2024, 11:45 a.m</td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2 py-3.5">3</td>
+            <td class="text-left p-2 py-3.5">cybil23</td>
+            <td class="text-left p-2 py-3.5">Crear post</td>
+            <td class="text-right p-2 py-3.5">Oct. 2, 2024, 3:30 p.m</td>
+          </tr>
+          <tr class="border-b border-[#D9D9D9] hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2 py-3.5">2</td>
+            <td class="text-left p-2 py-3.5">skills123</td>
+            <td class="text-left p-2 py-3.5">Cerrar sesión</td>
+            <td class="text-right p-2 py-3.5">Oct. 15, 2024, 9:10 a.m</td>
+          </tr>
+          <tr class="hover:bg-[#F1F3F8] transition-colors">
+            <td class="text-left p-2 py-3.5">1</td>
+            <td class="text-left p-2 py-3.5">hipnotron</td>
+            <td class="text-left p-2 py-3.5">Crear post</td>
+            <td class="text-right p-2 py-3.5">Nov. 7, 2024, 5:55 p.m</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
