Ajustado el color de hover en el botón de registro.
- El color de fondo al hacer hover cambió de `#1C253B` a `#24304C` para una mejor consistencia visual.

--- a/foros/templates/signup.html
+++ b/foros/templates/signup.html
@@ -32,7 +32,7 @@ ForoVox | Sign Up
       <input class="bg-[#fafafa] border border-[#B4B4B4] rounded-lg py-2 text-center" type="password"
         placeholder="Repetir contraseña" required>
       <button type="submit"
-        class="bg-[#10182B] text-white hover:bg-[#1C253B] rounded-lg py-2 text-center">Registrar</button>
+        class="bg-[#10182B] text-white hover:bg-[#24304C] rounded-lg py-2 text-center">Registrar</button>
     </div>
   </form>
   <p class="mt-5 text-[#666666] text-center">Ya tienes una cuenta? <a href="/login"
